Front qo'shildi kafka ishlayapti product yaratsh order yaratshlar bajarlyapti  Docker compose file  hali to'liq to'g'ri emas.